--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,4 @@
 machine:
   ruby:
     version: ruby-2.2.0-preview1
-test:
-  post:
-    - bundle exec rspec spec/    
+script: bundle exec rspec spec
